# cknittel.com

./: .clippy.toml  .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  build_submodules.sh  index.html  index.scss
common/src/: error.rs
server/: Cargo.toml
server/src/: main.rs  ws.rs
src/: app.rs  body.rs  header.rs  main.rs  page.rs  web_util.rs
src/pages/: home.rs  mod.rs
src/pages/games/: game.rs  game_list.rs  games.rs  games_page.rs  mod.rs  page.rs  rain_game.rs
static/pico/: index.html  pico.js
