[package]
name = "cknittel_com"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
itertools = "0.14.0"
strum = { version = "0.27.1", features = ["derive"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["DomTokenList", "Navigator", "Window"] }
yew = { version="0.21", features=["csr"] }
