[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
futures-util = "0.3.31"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "net", "macros"] }
tokio-tungstenite = "0.26.2"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
